--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,12 @@
 .body-messages {
-  max-height: 500px;
+  height: 500px;
   overflow-y: scroll;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
 }
